--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
 <body>
     <canvas id="marey" width="1500" height="900"></canvas>
 
-    <script src="js/Hammer.js"></script>
-    <script src="js/MareysChart.js"></script>
+    <script src="main.bundle.js"></script>
 
-    <script>
-        new MareysChart('marey', [{label: 'Carajás'}, {label: 'São Luís'}]);
-    </script>
 </body>
 </html>
