Interaction - Dragging anchor points and drawing virtual train (in progress)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 
 </head>
-<body>
+<body style="background-color: black">
     <canvas id="marey" width="1500" height="900"></canvas>
 </body>
 </html>
