--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 
 </head>
-<body style="background-color: black">
+<body style="background-color: white">
     <canvas id="marey" width="1500" height="900"></canvas>
 </body>
 </html>
